--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,11 @@ android {
 }
 
 dependencies {
+    def androidLibVersion = '1.0.0-beta01'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation "androidx.appcompat:appcompat:$androidLibVersion"
+    implementation "com.google.android.material:material:$androidLibVersion"
+    implementation "androidx.cardview:cardview:$androidLibVersion"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
