updated build config file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,17 @@ android {
     }
     buildTypes {
         release {
+            buildConfigField 'String', 'BASE_URL', BASE_URL
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField 'String', 'BASE_URL', BASE_URL
+
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
         }
     }
     // Butterknife requires Java 8.
