--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'cn.pedant.sweetalert:library:1.3'
+
+
 }
