--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'cn.pedant.sweetalert:library:1.3'
-
-
+    implementation 'com.google.dagger:dagger:2.24'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
 }
